--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGO_URL=mongodb://127.0.0.1:27017/HashOn
 SECRET='mysecret'
+AUTH_EMAIL="razalp0012300@gamil.com"
+AUTH_PASS="wlmdruvemoajrkbi"
