--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
