--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "@material-tailwind/react": "^2.1.8",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
