--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cropperjs": "^1.6.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.2",
@@ -19,6 +20,7 @@
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "react-cropper": "^2.3.3"
   }
 }
