--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,13 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "framer-motion": "^10.18.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-crop": "^11.0.5",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
