--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
+    "react-tooltip": "^5.26.0",
     "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
