--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash": "^4.14.202",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.314.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
