--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "randomstring": "^1.3.0",
-    "react-cropper": "^2.3.3"
+    "react-cropper": "^2.3.3",
+    "react-modal": "^3.16.1"
   }
 }
