--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
     "react-tooltip": "^5.26.0",
+    "react-webcam": "^7.2.0",
     "sweetalert2": "^11.10.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
