--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash": "^4.14.202",
+    "@types/react-lazyload": "^3.2.3",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-image-crop": "^11.0.5",
+    "react-lazyload": "^3.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
