--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tensorflow/tfjs-backend-webgl": "^4.17.0",
+    "@tensorflow/tfjs-converter": "^4.17.0",
+    "@tensorflow/tfjs-core": "^4.17.0",
     "@types/lodash": "^4.14.202",
     "@types/react-lazyload": "^3.2.3",
     "axios": "^1.6.5",
@@ -42,6 +45,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-slider": "^2.0.6",
     "react-toastify": "^10.0.3",
     "react-tooltip": "^5.26.0",
     "react-webcam": "^7.2.0",
