--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "nodemailer": "^6.9.8",
     "randomstring": "^1.3.0",
     "react-cropper": "^2.3.3",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   }
 }
