--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react-toastify": "^10.0.3",
     "react-tooltip": "^5.26.0",
     "react-webcam": "^7.2.0",
+    "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
