--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.5",
     "react-icons": "^5.0.1",
     "react-image-crop": "^11.0.5",
     "react-lazyload": "^3.2.0",
