--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
     "cropperjs": "^1.6.1",
     "dotenv": "^16.3.1",
