--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "@tensorflow/tfjs-core": "^4.17.0",
     "@types/lodash": "^4.14.202",
     "@types/react-lazyload": "^3.2.3",
+    "ag-charts-community": "^9.1.0",
+    "ag-charts-react": "^9.1.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
@@ -46,10 +48,12 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.3",
     "react-tooltip": "^5.26.0",
     "react-webcam": "^7.2.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.3",
     "tailwind-merge": "^2.2.0",
