--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "emoji-picker-react": "^4.8.0",
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.314.0",
@@ -53,6 +54,7 @@
     "react-toastify": "^10.0.3",
     "react-tooltip": "^5.26.0",
     "react-webcam": "^7.2.0",
+    "simple-peer": "^9.11.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.3",
@@ -63,6 +65,7 @@
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/simple-peer": "^9.11.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
