--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "@tensorflow/tfjs-core": "^4.17.0",
     "@types/lodash": "^4.14.202",
     "@types/react-lazyload": "^3.2.3",
+    "@zegocloud/zego-uikit-prebuilt": "^1.11.0",
+    "@zegocloud/zego-uikit-prebuilt-live-streaming-rn": "^2.1.2",
     "ag-charts-community": "^9.1.0",
     "ag-charts-react": "^9.1.1",
     "axios": "^1.6.5",
@@ -59,7 +61,8 @@
     "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.3",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zego-express-engine-webrtc": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
