--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^5.0.1",
     "react-image-crop": "^11.0.5",
     "react-lazyload": "^3.2.0",
+    "react-player": "^2.14.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
