navigate issues solved graph set ui issues solved in home page

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
 MONGO_URL=mongodb://127.0.0.1:27017/HashOn
 SECRET='mysecret'
-AUTH_EMAIL="razalp0012300@gamil.com"
-AUTH_PASS="wlmdruvemoajrkbi"
+GMAIL_USER='razalp0012300@gmail.com'
+GMAIL_PASS='wlmdruvemoajrkbi'
